<resources>
    <string name="app_name">Simple Password Manager</string>
    <string name="testing">Manage your password!</string>
    <string name="image_description">To put</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="popup_prompt_email_text">Email Address: </string>
    <string name="popup_prompt_master_pw_text">Master Password: </string>
    <string name="enter_email_address_hint">email address..</string>
    <string name="enter_master_password_hint">master password..</string>
    <string name="popup_prompt_master_password_text">Master password:</string>
    <string name="register_popup_tv">Register</string>
    <string name="register_btn">Register</string>
    <string name="login_tv">Login</string>
    <string name="defaultapplication">Application</string>
    <string name="defaultpassword">Password</string>
    <string name="forget_password_btn">Forget Password</string>
    <string name="ForgetPassword_tv">Forget Password</string>
    <string name="email_tv">Email address:</string>
    <string name="enter_email_hint">Enter email..</string>
    <string name="verification_code_tv">Verification code:</string>
    <string name="enter_verification_code_hint">Enter verification code</string>
</resources>