<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:minHeight="500dp"
    android:maxHeight="500dp"
    android:id="@+id/layout"
    tools:context=".ForgetPasswordActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        android:visibility="visible"

        android:src="@mipmap/logo_foreground" >

    </ImageView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ForgetPassword_tv"

            android:gravity="center"
            android:textSize="25sp">

        </TextView>

        <TextView
            android:id="@+id/tvEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:width="150dp"
            android:height="50dp"
            android:gravity="center"
            android:text="@string/email_tv"

            android:textSize="22sp" >

        </TextView>

        <EditText
            android:id="@+id/teForgetPwEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_toEndOf="@+id/tvEmailAddress"
            android:layout_alignTop="@+id/tvEmailAddress"
            android:layout_alignBottom="@+id/tvEmailAddress"

            android:autofillHints="Enter email address.."
            android:hint="@string/enter_email_hint"
            android:labelFor="@+id/tvEmailAddress"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor">

        </EditText>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvVerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:height="50dp"
                android:gravity="center"
                android:text="@string/verification_code_tv"

                android:textSize="22sp" >
            </TextView>


            <EditText
                android:id="@+id/teVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_toEndOf="@+id/tvVerificationCode"
                android:layout_alignTop="@+id/tvVerificationCode"
                android:layout_alignBottom="@+id/tvVerificationCode"

                android:autofillHints="Enter verification code.."
                android:hint="@string/enter_verification_code_hint"
                android:labelFor="@+id/tvVerificationCode"
                android:inputType="textPhonetic"
                tools:ignore="LabelFor">

            </EditText>

        </RelativeLayout>


        <Button
            android:id="@+id/submitForgetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"

            android:layout_centerInParent="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="100dp"
            android:text="@string/forget_password_btn">

        </Button>

    </RelativeLayout>

</RelativeLayout>